// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4"
  >
     
    <span>
      Default
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4 iconOnly large"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      play_arrow
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4 large"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4 primary"
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4 primary iconOnly"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      volume_up
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4 primary"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-n2zup4 halo"
    >
      5
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-n2zup4 halo"
    >
      23
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge Limit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-n2zup4"
  >
    <i
      class="material-icons svelte-n2zup4"
    >
      warning
    </i>
     
    <span>
      Just too much
    </span>
     
     
    <div
      class="badge svelte-n2zup4 halo"
    >
      999+
    </div>
  </button>
</section>
`;
